# hospx

./: .gitignore  CMakeLists.txt  design_principles.txt  hospital.db
api/: admin_api.h  appointment_api.h  doctor_api.h  login_api.h  patient_api.h  record_api.h  report_api.h  user_api.h
client/: package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/: DataTable.jsx  Modal.jsx  PageHeader.jsx  PatientForm.jsx  Sidebar.jsx
client/src/pages/: Appointments.jsx  Dashboard.jsx  DoctorDetails.jsx  Doctors.jsx  Login.jsx  MedicalRecords.jsx  PatientDetails.jsx  Patients.jsx  RoleSelector.jsx  Users.jsx
client/src/services/: api.js
config/: database_schema.sql
include/: admin.h  api_server.h  appointment.h  cors_config.h  database_handler.h  db_seed.h  doctor.h  patient.h  receptionist.h  record.h  report.h  user.h
src/: admin.cpp  appointment.cpp  database_handler.cpp  doctor.cpp  main.cpp  patient.cpp  receptionist.cpp  record.cpp  report.cpp  user.cpp
